:art: Restore binding of system environment using legacy names